# generust

./: .gitignore  Cargo.toml  Makefile  README.md  big_template.txt  output.txt  template.txt
dat/: domain.csv  first.csv
examples/: .gitignore  template.csv  template.json
src/: generust.rs  lib.rs  logger.rs  main.rs  options.rs  util.rs
