[package]
name = "generust"
version = "0.1.0"
authors = ["devpts00 <dev-pts-0@yandex.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
rand = "0.7"
chrono = "0.4"
regex = "1.3"
glob = "0.3"
memmap = "0.7"
uuid = { version = "0.8", features = ["v4"] }
structopt = { version = "0.3" }
atty = "0.2.14"
